Updated swagger for Notes - Archive, Edit
